Added new version for gulp

--- a/ide/pandora-plugin/res/ui/elements.html
+++ b/ide/pandora-plugin/res/ui/elements.html
@@ -1,1 +1,10 @@
+<link rel="import" href="bower_components/polymer/polymer.html">
+
+<!-- Cotton elements -->
+<link rel="import" href="bower_components/cotton-carrier/cotton-carrier-behavior.html">
+<link rel="import" href="bower_components/cotton-carrier/cotton-carrier-connection-lost.html">
+<link rel="import" href="bower_components/cotton-push/cotton-push-behavior.html">
+<link rel="import" href="bower_components/cotton-translator/cotton-translator-behavior.html">
+<link rel="import" href="bower_components/cotton-zombie/cotton-zombie.html">
+
 <link rel="import" href="widgets/widgets.html">
