--- a/server-web/src/dialogs/alpaca/dialog-widget.html
+++ b/server-web/src/dialogs/alpaca/dialog-widget.html
@@ -4,12 +4,13 @@
         function widget() {}
 
         widget.prototype = {};
-        widget.prototype.template = function() { return '<h3 class="label"></h3><div class="description"></div><div class="tabs"></div><div class="toolbar"></div></div>'; };
+        widget.prototype.template = function() { return '<h3 class="label"></h3><div class="description"></div><div class="done"></div><div class="tabs"></div><div class="toolbar"></div></div>'; };
 
         widget.prototype.render = function(dialog, container) {
             container.innerHTML = this.template();
 
             _renderLabel(dialog, container.querySelector(".label"));
+            _renderDone(dialog, container.querySelector(".done"));
             _renderDescription(dialog, container.querySelector(".description"));
             _renderTabs(dialog, container.querySelector(".tabs"));
             _renderToolbar(dialog, container);
@@ -20,12 +21,22 @@
             dialogWidget.refresh(inputList, container, view);
         };
 
+        widget.prototype.done = function(container) {
+            container.querySelector(".done").style.display = "block";
+            container.querySelector(".tabs").style.display = "none";
+            container.querySelector(".toolbar").style.display = "none";
+        };
+
         widget.prototype.getInput = function(key) {
             return AlpacaWidgetFactory.get("inputlist").getInput(key);
         };
 
         function _renderLabel(dialog, container) {
             container.innerHTML = dialog.label;
+        }
+
+        function _renderDone(dialog, container) {
+            container.innerHTML = DialogAlpacaDictionary.labelFor("done");
         }
 
         function _renderDescription(dialog, container) {
