Added styles to done message for konos server web dialogs

--- a/server-web/src/dialogs/alpaca.html
+++ b/server-web/src/dialogs/alpaca.html
@@ -67,8 +67,9 @@
             margin-bottom: 10px;
         }
         .done {
-            color: blue;
             display: none;
+            padding: 5px 20px;
+            border-radius: 6px;
         }
         .wizard {
             padding: 0;
