Adding multiple fields saving support

--- a/server-web/src/dialogs/alpaca.html
+++ b/server-web/src/dialogs/alpaca.html
@@ -90,6 +90,15 @@
             padding-left: 0;
             font-weight: bold;
         }
+        .alpaca-field-array {
+            padding: 0;
+        }
+        .alpaca-field-array legend {
+            margin: 0;
+            border-bottom: 0;
+            font-size: 11pt;
+            font-weight: bold;
+        }
         .widget > .title, .widget .toolbar {
             padding: 15px 15px 4px 0px;
             margin: 0;
