--- a/server-web/src/dialogs/alpaca/input-widget.html
+++ b/server-web/src/dialogs/alpaca/input-widget.html
@@ -78,7 +78,16 @@
             },
 
             data: function (input) {
-                return input.value ? input.value : input.defaultValue;
+                return input.value ? this._valueOf(input) : input.defaultValue;
+            },
+
+            _valueOf : function(input) {
+                if (input.multiple === null) return input.value;
+                var result = [];
+                for (var i=0;i<input.value.length; i++) {
+                    result.push(input.value[i]);
+                }
+                return result;
             },
 
             schema: function (input) {
