Added support for catalogs modifications in dialogs

--- a/server-web/src/dialogs/alpaca.html
+++ b/server-web/src/dialogs/alpaca.html
@@ -99,6 +99,22 @@
             font-size: 11pt;
             font-weight: bold;
         }
+        .input.section {
+            border: 0 !important;
+        }
+        .alpaca-field-object {
+            padding: 0;
+        }
+        .alpaca-field-object .alpaca-container-item .alpaca-field {
+            border: 0;
+        }
+        .alpaca-field-object > legend {
+            font-size: 14pt;
+            margin-bottom: 10px;
+        }
+        .alpaca-control.checkbox {
+            margin-top: 0;
+        }
         .widget > .title, .widget .toolbar {
             padding: 15px 15px 4px 0px;
             margin: 0;
