--- a/server-web/src/dialogs/alpaca/input-widget/multiple-input-widget.html
+++ b/server-web/src/dialogs/alpaca/input-widget/multiple-input-widget.html
@@ -37,7 +37,7 @@
             result.fields.item = AlpacaWidgetFactory.get(input.type, false).converter().options(input);
             result.fields.item.label = "";
             result.events = null;
-            result.toolbar = {
+            result.actionbar = {
                 "actions" : [{
                     "action": "add",
                     "click" : function(key, action, itemIndex) {
