--- a/server-web/src/dialogs/alpaca/input-widget/radiobox-input-widget.html
+++ b/server-web/src/dialogs/alpaca/input-widget/radiobox-input-widget.html
@@ -45,7 +45,7 @@
         }
 
         function _atInputChange(alpacaInput, input, value) {
-            document.onInputChange(input, value);
+            document.onInputChange(document.pathOf(alpacaInput), value);
         }
 
         return converter;
