--- a/server-web/src/dialogs/alpaca/input-widget.html
+++ b/server-web/src/dialogs/alpaca/input-widget.html
@@ -95,6 +95,7 @@
                 result.title = input.label;
                 result.readonly = input.readonly ? input.readonly : false;
                 result.required = input.required ? input.required : false;
+                result.inputType = input.type;
                 return result;
             },
 
@@ -103,7 +104,6 @@
                 result.helper = input.helper ? input.helper : false;
                 result.placeholder = input.placeholder ? input.placeholder : false;
                 result.disabled = input.readonly ? input.readonly : false;
-                result.hidden = !input.visible;
                 result.events = _addEvents(result, input);
                 result.validator = _receiveValidationAlgorithmAndRegisterItToInput.bind(input);
                 return result;
@@ -134,16 +134,7 @@
         function _addEvents(alpacaInput, input) {
             return {
                 change : function() {
-                    var parent = this.getParent();
-                    var position = 0;
-
-                    if (parent != null) {
-                        for (position=0; position<parent.children.length; position++) {
-                            if (parent.children[position] == this) break;
-                        }
-                    }
-
-                    document.onInputChange(input, this.getValue(), position);
+                    document.onInputChange(document.pathOf(this), this.getValue());
                 }
             }
         }
