Added Toolbar to dialogs

--- a/server-web/src/dialogs/alpaca.html
+++ b/server-web/src/dialogs/alpaca.html
@@ -156,7 +156,7 @@
         const DialogAlpacaDictionary = {
             es : {
                 continue : "continuar",
-                complete : "enviar",
+                send : "enviar",
                 done : "información enviada",
                 editDocumentTitle : "editar documento",
                 editDocumentDescription : "asistente de edición de documentos",
@@ -176,7 +176,7 @@
             },
             en : {
                 continue : "continuar",
-                complete : "send",
+                send : "send",
                 done : "dialog info sent",
                 editDocumentTitle : "edit document",
                 editDocumentDescription : "documents edition wizard",
