--- a/server-web/src/dialogs/alpaca.html
+++ b/server-web/src/dialogs/alpaca.html
@@ -58,6 +58,10 @@
             margin: 15px 0;
             padding-top: 10px;
         }
+        .toolbar > div {
+            float: left;
+            margin-left: 10px;
+        }
         .tabs .inputs {
             margin: 10px;
         }
