--- a/server-web/src/dialogs/alpaca/dialog-widget.html
+++ b/server-web/src/dialogs/alpaca/dialog-widget.html
@@ -92,7 +92,7 @@
             var operations = dialog.toolbar.operationList;
 
             for (var i=0; i<operations.length; i++)
-                _renderButton({ name: operations[i].label, label: DialogAlpacaDictionary.labelFor(operations[i].label) }, toolbarContainer);
+                _renderButton({ name: operations[i].name, label: DialogAlpacaDictionary.labelFor(operations[i].label) }, toolbarContainer);
         }
 
         function _renderButton(button, container, action) {
