Fix bug with firefox when loading html imports

--- a/server-web/src/dialogs/alpaca.html
+++ b/server-web/src/dialogs/alpaca.html
@@ -23,7 +23,24 @@
     <link rel="stylesheet" href="../styles/bootstrap-datetimepicker.min.css" />
 
     <!-- components -->
-    <link rel="import" href="alpaca/widget-factory.html" />
+    <script src="alpaca/dialog-widget.js"></script>
+    <script src="alpaca/input-list-widget.js"></script>
+    <script src="alpaca/input-widget.js"></script>
+    <script src="alpaca/input-widget/date-input-widget.js"></script>
+    <script src="alpaca/input-widget/datetime-input-widget.js"></script>
+    <script src="alpaca/input-widget/text-input-widget.js"></script>
+    <script src="alpaca/input-widget/memo-input-widget.js"></script>
+    <script src="alpaca/input-widget/password-input-widget.js"></script>
+    <script src="alpaca/input-widget/optionbox-input-widget.js"></script>
+    <script src="alpaca/input-widget/checkbox-input-widget.js"></script>
+    <script src="alpaca/input-widget/radiobox-input-widget.js"></script>
+    <script src="alpaca/input-widget/combobox-input-widget.js"></script>
+    <script src="alpaca/input-widget/file-input-widget.js"></script>
+    <script src="alpaca/input-widget/picture-input-widget.js"></script>
+    <script src="alpaca/input-widget/document-input-widget.js"></script>
+    <script src="alpaca/input-widget/section-input-widget.js"></script>
+    <script src="alpaca/input-widget/multiple-input-widget.js"></script>
+    <script src="alpaca/widget-factory.js"></script>
 
 </head>
 
