Implementing alexandria framwork

--- a/alexandria-framework-activity/src/widgets/_common/catalog/alexandria-catalog-list.html
+++ b/alexandria-framework-activity/src/widgets/_common/catalog/alexandria-catalog-list.html
@@ -296,7 +296,7 @@
                 _selectionEnabled : { type: Boolean, value: function() { return false; } }
             },
 
-            behaviors: [ CottonBehaviors.TranslatorBehavior, AlexandriaBehaviors.CatalogBehavior, SumusBehaviors.DateBehavior ],
+            behaviors: [ CottonBehaviors.TranslatorBehavior, AlexandriaBehaviors.CatalogBehavior, AlexandriaBehaviors.DateBehavior ],
 
             attached: function () {
                 this.translate(AlexandriaCatalogListDictionary);
