--- a/alexandria-framework-activity/src/widgets/_common/mold/alexandria-mold.html
+++ b/alexandria-framework-activity/src/widgets/_common/mold/alexandria-mold.html
@@ -62,7 +62,9 @@
         Polymer({
             is: 'alexandria-mold',
 
-            behaviors: [ CottonBehaviors.TranslatorBehavior, SumusBehaviors.AlexandriaMoldBehavior, SumusBehaviors.BreadcrumbsBehavior ],
+            behaviors: [ CottonBehaviors.TranslatorBehavior,
+                         AlexandriaBehaviors.MoldBehavior,
+                         AlexandriaBehaviors.BreadcrumbsBehavior ],
 
             attached: function () {
                 this.translate(AlexandriaMoldDictionary);
