--- a/alexandria-framework-activity/src/widgets/alexandria-mold.html
+++ b/alexandria-framework-activity/src/widgets/alexandria-mold.html
@@ -32,8 +32,8 @@
             behaviors: [ CottonBehaviors.CarrierBehavior,
                          CottonBehaviors.PushBehavior,
                          CottonBehaviors.TranslatorBehavior,
-                         AlexandriaMoldWidgetBehaviors.Requester,
-                         AlexandriaMoldWidgetBehaviors.NotifierListener ],
+                         AlexandriaMoldBehaviors.Requester,
+                         AlexandriaMoldBehaviors.NotifierListener ],
 
             properties : {
             },
