--- a/alexandria-framework-activity/src/widgets/widgets.html
+++ b/alexandria-framework-activity/src/widgets/widgets.html
@@ -1,21 +1,21 @@
-<link rel="import" href="alexandria-temporal-time-catalog-widget.html">
-<link rel="import" href="alexandria-mold-widget.html">
-<link rel="import" href="alexandria-panel-widget.html">
-<link rel="import" href="alexandria-panel-custom-view-widget.html">
-<link rel="import" href="alexandria-page-container-widget.html">
-<link rel="import" href="alexandria-time-navigator-widget.html">
-<link rel="import" href="alexandria-panel-display-view-widget.html">
-<link rel="import" href="alexandria-time-range-navigator-widget.html">
-<link rel="import" href="alexandria-catalog-widget.html">
-<link rel="import" href="alexandria-catalog-magazine-view-widget.html">
-<link rel="import" href="alexandria-dialog-container-widget.html">
-<link rel="import" href="alexandria-item-widget.html">
+<link rel="import" href="alexandria-catalog.html">
 <link rel="import" href="alexandria-desktop.html">
-<link rel="import" href="alexandria-menu-layout-widget.html">
-<link rel="import" href="alexandria-catalog-list-view-widget.html">
-<link rel="import" href="alexandria-catalog-map-view-widget.html">
-<link rel="import" href="alexandria-catalog-display-view-widget.html">
-<link rel="import" href="alexandria-tab-layout-widget.html">
-<link rel="import" href="alexandria-catalog-view-list-widget.html">
-<link rel="import" href="alexandria-panel-catalog-view-widget.html">
-<link rel="import" href="alexandria-temporal-range-catalog-widget.html">
+<link rel="import" href="alexandria-panel-display-view.html">
+<link rel="import" href="alexandria-catalog-view-list.html">
+<link rel="import" href="alexandria-page-container.html">
+<link rel="import" href="alexandria-catalog-map-view.html">
+<link rel="import" href="alexandria-catalog-list-view.html">
+<link rel="import" href="alexandria-tab-layout.html">
+<link rel="import" href="alexandria-panel-catalog-view.html">
+<link rel="import" href="alexandria-time-range-navigator.html">
+<link rel="import" href="alexandria-catalog-magazine-view.html">
+<link rel="import" href="alexandria-menu-layout.html">
+<link rel="import" href="alexandria-temporal-time-catalog.html">
+<link rel="import" href="alexandria-catalog-display-view.html">
+<link rel="import" href="alexandria-temporal-range-catalog.html">
+<link rel="import" href="alexandria-item.html">
+<link rel="import" href="alexandria-time-navigator.html">
+<link rel="import" href="alexandria-panel.html">
+<link rel="import" href="alexandria-panel-custom-view.html">
+<link rel="import" href="alexandria-dialog-container.html">
+<link rel="import" href="alexandria-mold.html">
