--- a/alexandria-framework-activity/src/widgets/_common/alexandria-date-behavior.html
+++ b/alexandria-framework-activity/src/widgets/_common/alexandria-date-behavior.html
@@ -50,15 +50,15 @@
         quarterOf: function(date, language) {
             moment.locale(language);
             var quarter = moment(date).format('Q');
-            if (quarter == 1) return SumusBehaviors.DateBehavior.Dictionary[language].First;
-            if (quarter == 2) return SumusBehaviors.DateBehavior.Dictionary[language].Second;
-            if (quarter == 3) return SumusBehaviors.DateBehavior.Dictionary[language].Third;
-            if (quarter == 4) return SumusBehaviors.DateBehavior.Dictionary[language].Fourth;
+            if (quarter == 1) return AlexandriaBehaviors.DateBehavior.Dictionary[language].First;
+            if (quarter == 2) return AlexandriaBehaviors.DateBehavior.Dictionary[language].Second;
+            if (quarter == 3) return AlexandriaBehaviors.DateBehavior.Dictionary[language].Third;
+            if (quarter == 4) return AlexandriaBehaviors.DateBehavior.Dictionary[language].Fourth;
         },
 
         monthOf: function(date, language) {
             moment.locale(language);
-            return moment(date).format(SumusBehaviors.DateBehavior.Dictionary[language].MonthFormat);
+            return moment(date).format(AlexandriaBehaviors.DateBehavior.Dictionary[language].MonthFormat);
         },
 
         weekOf: function(date, language) {
@@ -68,17 +68,17 @@
 
         dayOf: function(date, language) {
             moment.locale(language);
-            return moment(date).format(SumusBehaviors.DateBehavior.Dictionary[language].DayFormat);
+            return moment(date).format(AlexandriaBehaviors.DateBehavior.Dictionary[language].DayFormat);
         },
 
         fullDayOf: function(date, language) {
             moment.locale(language);
-            return moment(date).format(SumusBehaviors.DateBehavior.Dictionary[language].FullDayFormat);
+            return moment(date).format(AlexandriaBehaviors.DateBehavior.Dictionary[language].FullDayFormat);
         },
 
         numericDayOf: function(date, language) {
             moment.locale(language);
-            return moment(date).format(SumusBehaviors.DateBehavior.Dictionary[language].NumericDayFormat);
+            return moment(date).format(AlexandriaBehaviors.DateBehavior.Dictionary[language].NumericDayFormat);
         },
 
         minuteOf: function(date, language) {
