Renamed sumusIcon with alexandriaIcon Added dialog combo box support for empty message Fix bugs loading dialog input values with multiple sections

--- a/alexandria/activity-elements-activity/src/widgets/_common/mold/alexandria-mold-behavior.html
+++ b/alexandria/activity-elements-activity/src/widgets/_common/mold/alexandria-mold-behavior.html
@@ -138,7 +138,7 @@
                 icon = "warning";
                 stamp.value = "";
             }
-            stamp.properties.icon = iconType === "sumus" ? icon : "";
+            stamp.properties.icon = iconType === "alexandria" ? icon : "";
             stamp.properties.title = this._parseFunctions(this._propertyValueOf(moldStamp,'title'));
         },
 
